--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-test:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -19,8 +19,8 @@ jobs:
           cache: 'npm'
           cache-dependency-path: ./package-lock.json        
 
-      - name: npm install
-        run: npm install
+      - name: npm ci
+        run: npm ci
       
       - name: npm build
         run: npm run build
