--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,7 +5,8 @@
             "@api" : ["api"],
             "@lib/*" : ["lib/*"],
             "@components/*" : ["components/*"],
-            "@interface/*" : ["interface/*"]
+            "@interface/*" : ["interface/*"],
+            "@pc/*" : ["components/PC/*"]
          }
     }
 }
