--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
       
       - name: npm product
-        run: npm run build      
+        run: npm run product      
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
