--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
@@ -26,9 +27,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start" : "craco start",
+    "start": "craco start",
     "build": "craco build && cp -r ./config ./build/config && cp -r ./assets ./build/assets",
-    "product" : "GENERATE_SOURCEMAP=false craco build && cp -r ./config ./build/config && cp -r ./assets ./build/assets"
+    "product": "GENERATE_SOURCEMAP=false craco build && cp -r ./config ./build/config && cp -r ./assets ./build/assets"
   },
   "eslintConfig": {
     "extends": [
